--- a/src/components/projectCard.css
+++ b/src/components/projectCard.css
@@ -67,13 +67,13 @@
     transition: opacity 0.5s ease-in-out 0.25s;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 350px) {
     .card-project {
       width: 220px;
     }
 }
 
-@media screen and (min-width: 401px) {
+@media screen and (min-width: 351px) {
     .card-project {
       width: 300px;
     }
